Asked Bob to improve application